// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: function FunctionType 1`] = `
Object {
  "kind": "FunctionType",
  "params": Array [],
  "returnType": Object {
    "kind": "VoidType",
    "value": "void",
  },
}
`;

exports[`parser: function FunctionType: nested 1`] = `
Object {
  "kind": "FunctionType",
  "params": Array [],
  "returnType": Object {
    "kind": "FunctionType",
    "params": Array [
      Object {
        "kind": "FunctionTypeParam",
        "name": Object {
          "kind": "Identifier",
          "name": "a",
        },
        "type": Object {
          "kind": "NumberType",
          "value": "number",
        },
      },
      Object {
        "kind": "FunctionTypeParam",
        "name": Object {
          "kind": "Identifier",
          "name": "b",
        },
        "type": Object {
          "kind": "StringType",
          "value": "string",
        },
      },
    ],
    "returnType": Object {
      "kind": "VoidType",
      "value": "void",
    },
  },
}
`;

exports[`parser: function FunctionType: optional param 1`] = `
Object {
  "kind": "FunctionType",
  "params": Array [
    Object {
      "kind": "FunctionTypeParam",
      "name": Object {
        "kind": "Identifier",
        "name": "a",
      },
      "type": Object {
        "kind": "NumberType",
        "value": "number",
      },
    },
    Object {
      "kind": "FunctionTypeParam",
      "name": Object {
        "kind": "Identifier",
        "name": "b",
      },
      "optional": true,
      "type": Object {
        "kind": "StringType",
        "value": "string",
      },
    },
  ],
  "returnType": Object {
    "kind": "NumberType",
    "value": "number",
  },
}
`;

exports[`parser: function FunctionType: params 1`] = `
Object {
  "kind": "FunctionType",
  "params": Array [
    Object {
      "kind": "FunctionTypeParam",
      "name": Object {
        "kind": "Identifier",
        "name": "a",
      },
      "type": Object {
        "kind": "NumberType",
        "value": "number",
      },
    },
    Object {
      "kind": "FunctionTypeParam",
      "name": Object {
        "kind": "Identifier",
        "name": "b",
      },
      "type": Object {
        "kind": "StringType",
        "value": "string",
      },
    },
  ],
  "returnType": Object {
    "kind": "NumberType",
    "value": "number",
  },
}
`;

exports[`parser: function FunctionType: rest 1`] = `
Object {
  "kind": "FunctionType",
  "params": Array [
    Object {
      "kind": "FunctionTypeParam",
      "name": Object {
        "kind": "Identifier",
        "name": "args",
      },
      "rest": true,
      "type": Object {
        "dimension": 1,
        "elementType": Object {
          "kind": "AnyType",
          "value": "any",
        },
        "kind": "ArrayType",
      },
    },
  ],
  "returnType": Object {
    "kind": "VoidType",
    "value": "void",
  },
}
`;

exports[`parser: function FunctionType: type param 1`] = `
Object {
  "kind": "FunctionType",
  "params": Array [
    Object {
      "kind": "FunctionTypeParam",
      "name": Object {
        "kind": "Identifier",
        "name": "key",
      },
      "type": Object {
        "kind": "TypeReference",
        "typeName": Object {
          "kind": "Identifier",
          "name": "K",
        },
      },
    },
    Object {
      "kind": "FunctionTypeParam",
      "name": Object {
        "kind": "Identifier",
        "name": "value",
      },
      "type": Object {
        "kind": "TypeReference",
        "typeName": Object {
          "kind": "Identifier",
          "name": "T",
        },
      },
    },
  ],
  "returnType": Object {
    "kind": "VoidType",
    "value": "void",
  },
  "typeParams": Array [
    Object {
      "constraint": Object {
        "kind": "StringType",
        "value": "string",
      },
      "kind": "TypeReference",
      "typeName": Object {
        "kind": "Identifier",
        "name": "K",
      },
    },
    Object {
      "kind": "TypeReference",
      "typeName": Object {
        "kind": "Identifier",
        "name": "T",
      },
    },
  ],
}
`;
